[metadata]
name = tox-py
version = 1.2.0
description = Adds the --py flag to tox to run environments matching a given Python interpreter.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/tox-py
project_urls =
    Changelog = https://github.com/adamchainz/tox-py/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT License
keywords = tox
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_file = LICENSE

[options]
package_dir=
    =src
py_modules = tox_py
include_package_data = True
install_requires =
    tox >=3, <4
python_requires = >=3.7
zip_safe = False

[options.entry_points]
tox =
    tox_py=tox_py

[coverage:run]
branch = True
parallel = True
source = tox_py

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
